.metadata/.plugins/org.eclipse.cdt.ui/Matala5.build.log
22:57:51 **** Incremental Build of configuration Debug for project Matala5 ****
make all 
Building file: ../Birds.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"Birds.d" -MT"Birds.d" -o "Birds.o" "../Birds.cpp"
../Birds.cpp: In member function ‘void Birds::print()’:
../Birds.cpp:23:2: error: ‘cout’ is not a member of ‘std’
  std::cout << " " << mIncubatioTime;
  ^
subdir.mk:45: recipe for target 'Birds.o' failed
make: *** [Birds.o] Error 1

22:57:51 Build Finished (took 164ms)

